--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!DOCTYPE html>
     <html lang="en">
-    <head>
+      <head>
         <header>
-            <nav>
-                <a class="overButton" href="">Over</a>
-                <a class="storeButton" href="">Store</a>
-                <a class="gmailButton" href="">Gmail</a>
-                <a class="imageButton" href="">Afbeeldingen</a>
-                <a class="loginButton" href="">Inloggen</a>
-            </nav>
+          <nav>
+            <a class="overButton" href="">Over</a>
+            <a class="storeButton" href="">Store</a>
+            <a class="gmailButton" href="">Gmail</a>
+            <a class="imageButton" href="">Afbeeldingen</a>
+            <a class="loginButton" href="">Inloggen</a>
+          </nav>
         </header>
-    </head>
-    <body>
+      </head>
+      <body>
         <main>
-            <img src="" alt="">
+          <div>
+            <img
+              class="googleLogoo"
+              src="img/googleLogo.png"
+              alt="Logo van google"
+              width="260px"
+            />
+          </div>
+          <div> <input class="search" type="text" placeholder="Zoek op Google of typ een URL" />
+        <button type="submit"><i class="fa fa-search"></i></button>
+        </div>
         </main>
-    </body>
-    <footer></footer>
+      </body>
+      <footer></footer>
     </html>
-    
+  </head>
+</html>
